# Documentation on setuptools & pyproject.toml - https://setuptools.pypa.io/en/latest/userguide/index.html
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "citygeo_secrets"
version = "3.0.0"
description = "Securely obtain and/or cache secrets"
readme = "README.md"
authors = [
    {name = "James Midkiff", email = "james.midkiff@phila.gov"}
    ]
requires-python = ">=3.6"
dependencies = [
    "keeper_secrets_manager_core >=16.6.2, <17.0.0"
    ]

[tool.setuptools]
script-files = ["citygeo_secrets/tmpfs-mount.sh"]
